2010-09-17  Colin Watson  <cjwatson@ubuntu.com>

	Fix DM-RAID probing with recent versions of device-mapper udev
	rules.

	* grub-core/kern/emu/hostdisk.c (read_device_map): Don't
	canonicalise device paths under /dev/mapper/.
	(convert_system_partition_to_system_disk): Compare the
	uncanonicalised path to /dev/mapper/ rather than the canonicalised
	path, since device nodes under /dev/mapper/ are often symlinks.

2010-09-17  Yves Blusseau  <blusseau@zetam.org>

	* .bzrignore: *.d removed (old rule), add *.image and symlist.h.

2010-09-16  Yves Blusseau  <blusseau@zetam.org>

	* configure.ac: Avoid some annoying error messages if freetype-config
	program is not found.

2010-09-16  Colin Watson  <cjwatson@ubuntu.com>

	Support RAID on virtio devices, and others.

	* grub-core/kern/emu/getroot.c [__MINGW32__] (find_root_device):
	Rename to ...
	[__MINGW32__] (grub_find_device): ... this.
	[! __MINGW32__ && ! __CYGWIN__] (find_root_device): Rename to ...
	[! __MINGW32__ && ! __CYGWIN__] (grub_find_device): ... this.  Use a
	reasonable default if dir is NULL.
	[! __MINGW32__ && __CYGWIN__] (find_cygwin_root_device): Rename to
	...
	[! __MINGW32__ && __CYGWIN__] (grub_find_device): ... this.
	(grub_guess_root_device): Update callers.
	* include/grub/emu/getroot.h (grub_find_device): Add prototype.

	* util/raid.c (grub_util_getdiskname): Remove.
	(grub_util_raid_getmembers): Use grub_find_device rather than
	grub_util_getdiskname.

2010-09-16  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (serial): Remove obsolete comment about GRUB
	needing to be compiled with serial support.
	(ls): Indicate that multiple files are accepted.
	* grub-core/commands/ls.c (GRUB_MOD_INIT): Update help text to
	indicate that multiple files are accepted.

2010-09-16  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Add *.1, *.8, grub-shell, grub-shell-tester,
	libgrub_a_init.c, and util/bash-completion.d/grub.

2010-09-15  Vladimir Serbinenko  <phcoder@gmail.com>
